# django-save-override

./: LICENSE  README.md  pyproject.toml
src/myapp/: manage.py
src/myapp/myapp/: models.py  settings.py
