[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-app"
version = "0.0.0"
description = "Bug reproduction example"
authors = "Rein van 't Veer"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "5.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
django-stubs = {extras = ["mypy-compatible"], version = "^4.2.7"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.django-stubs]
ignore_missing_model_attributes = true
django_settings_module = "src.myapp.settings"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
no_site_packages = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_explicit = true
plugins = ["mypy_django_plugin.main"]
mypy_path="./src:./tests"

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

